Extend section on primitive patterns